增加js调原生的返回值

--- a/Js2native/app/src/main/assets/test.html
+++ b/Js2native/app/src/main/assets/test.html
@@ -7,7 +7,8 @@
 
     <script>
          function callAndroid(){
-            test.toaststr("js2native");
+           var result = test.toaststr("js2native");
+           alert("调原生的返回值:"+ result)
          }
     </script>
     <script>
